--- a/tests/example.html
+++ b/tests/example.html
@@ -15,7 +15,7 @@
     </head>
     <body style="width:100%;height:100%;">
         <style>
-          #viewport1{
+          #body{
             height:100%;
             width:100%;
             display:flex;
@@ -23,8 +23,18 @@
             align-items:center;
             background-color: rgba(0,0,0,0.16)
           }
+          .example-page{
+            display: flex;
+            flex-direction: column;
+            width: 720px;
+          }
+          .example-page > .display-row{
+            display: flex;
+            justify-content: center;
+            margin: 20px 0;
+          }
         </style>
-        <div id="viewport1"></div>
+        <div id="body"></div>
 
         <!-- dependencies -->
         <script type="text/javascript" src="../bower_components/jquery/dist/jquery.min.js"></script>
@@ -49,29 +59,20 @@
         <!-- library -->
         <script type="text/javascript" src="../dist/js/Wood.js"></script>
 
+        <!-- library -->
+        <script type="text/javascript" src="example.js"></script>
+
         <!-- initialization -->
         <script type="text/javascript">
-          var range = function(start,end){
-            var range = [];
-            for (var i = start; i <= end; i++) {
-                range.push(i);
-            }
-            return range;
-          };
-
-
           var app = new Backbone.Marionette.Application();
           app.addRegions({
-          	testRegion1: '#viewport1'
+          	body: '#body'
           });
 
           $(document).ready(function() {
-            var combo = new Wood.inputs.Text({
-              defaultValue: '',
-              hintText: 'Or Email',
-              floatingLabelText: 'Username',
+            var examplePage = new Wood.ExamplePage({
             });
-            app.testRegion1.show(combo)
+            app.body.show(examplePage)
           });
         </script>
     </body>
