first steps in es2015, webpack build, and nicely inheritable lists

--- a/tests/example.html
+++ b/tests/example.html
@@ -6,9 +6,7 @@
 
         <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="../bower_components/bootstrap-dialog/dist/css/bootstrap-dialog.min.css"/>
-        <link rel="stylesheet" href="../bower_components/bootstrap-select/dist/css/bootstrap-select.min.css"/>
         <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css"/>
-        <link rel="stylesheet" href="../bower_components/fuelux/dist/css/fuelux.min.css"/>
 
         <!-- library -->
         <link rel="stylesheet" href="../dist/css/Wood.css"/>
@@ -44,16 +42,14 @@
         <script type="text/javascript" src="../bower_components/datatables-colResize/dataTables.colResize.js"></script>
 
         <script type="text/javascript" src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="../bower_components/bootstrap-select/dist/js/bootstrap-select.js"></script>
         <script type="text/javascript" src="../bower_components/bootstrap-dialog/dist/js/bootstrap-dialog.js"></script>
-        <script type="text/javascript" src="../bower_components/fuelux/dist/js/fuelux.min.js"></script>
 
         <script type="text/javascript" src="../bower_components/underscore/underscore-min.js"></script>
         <script type="text/javascript" src="../bower_components/underscore.string/dist/underscore.string.min.js"></script>
         <script type="text/javascript" src="../bower_components/backbone/backbone.js"></script>
         <script type="text/javascript" src="../bower_components/backbone.babysitter/lib/backbone.babysitter.js"></script>
         <script type="text/javascript" src="../bower_components/backbone.wreqr/lib/backbone.wreqr.js"></script>
-        <script type="text/javascript" src="../bower_components/marionette/lib/backbone.marionette.min.js"></script>
+        <script type="text/javascript" src="../bower_components/marionette/lib/backbone.marionette.js"></script>
 
         <!-- library -->
         <script type="text/javascript" src="../dist/js/Wood.js"></script>
